2002-04-14  Philippe Elie  <phil.el@wanadoo.fr>

	* first import standalone code to test oriented btree
	  samples files
